Add user feedback when locking for D&D between images

BUG:376382